appId: com.minkgkyaw9899.muse
---
- launchApp:
    clearState: true
- assertVisible: 'Your library is empty'
- tapOn: Favorites
- assertVisible: 'No favorites yet'
- tapOn: Settings
- tapOn: 'Appearance.*'
- tapOn: Dark
- assertVisible: Dark
